--- a/index.html
+++ b/index.html
@@ -5,14 +5,13 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite + React</title>
+  <title>BlogWorld</title>
 </head>
 
 <body>
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
-  <script src="https://cdn.tiny.cloud/1/2b0bgtavy8oduz58clmdqi0zbswhpwi9diu708ulqwad8yg9/tinymce/7/tinymce.min.js"
-    referrerpolicy="origin"></script>
+
 </body>
 
 </html>
